# kwin-effects-forceblur

./: .gitignore  CMakeLists.txt  README.md  flake.nix  package.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: arch-linux-wayland.yml  arch-linux-x11.yml  arch-linux.yml  debian-experimental.yml  fedora-40.yml  fedora-41-wayland.yml  fedora-41-x11.yml  fedora-41.yml  fedora-42-wayland.yml  fedora-42-x11.yml  fedora-42.yml  fedora40.yml  neon-developer.yml  neon-unstable-wayland.yml  neon-unstable-x11.yml  neon-unstable.yml  nixos-plasma-6-0-5.yml  nixos-plasma-6-1-5.yml  nixos-stable.yml  nixos-unstable.yml  opensuse-tumbleweed-wayland.yml  opensuse-tumbleweed-x11.yml  opensuse-tumbleweed.yml
docs/: configuration.md
nix/: package-x11.nix  package.nix
src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blur.qrc  blurwindow.cpp  blurwindow.h  main.cpp  metadata.json  rules.cpp  rules.h  rulesettings.kcfg  settings.cpp  settings.h  utils.h  window.cpp  window.h  xdgshellwindow.cpp
src/blur/: CMakeLists.txt  blur.qrc  metadata.json  settings.cpp  settings.h
src/blur/kcm/: blur_config.cpp
src/blur/shaders/: roundedcorners.glsl
src/config/: config.kcfg  config.kcfgc
src/effects/blur/: blur.cpp
src/kcm/: CMakeLists.txt  about.html  blur_config.cpp  blur_config.h  blur_config.qrc  blur_config.ui
src/kcms/rules/: rulesmodel.cpp
src/shaders/: downsample.frag  downsample_core.frag  roundedcorners.frag  roundedcorners.glsl  roundedcorners_core.frag  texture.frag  texture.glsl  texture_core.frag  texture_core.glsl  upsample.frag  upsample.glsl  upsample_core.frag  upsample_core.glsl
src/windowrules/: windowproperties.cpp  windowproperties.h  windowrule.cpp  windowrule.h  windowrulecondition.cpp  windowrulecondition.h  windowrulelist.cpp  windowrulelist.h
tools/: plasma-nested.sh
